# wcap

./: CMakeLists.txt  dllmain.cpp  dummy_window.cpp  dummy_window.h  dx9offsets.cpp  dxoffsets.h  dxscreen.h  hook.h  inject.h  main.cpp  mappedfile.h  sharedmemory.h  wcap.h
